<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wall_follow</name>
  <version>0.0.0</version>
  <description>Follow the wall</description>
  <maintainer email="tester@todo.todo">tester</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
